package protoFile.activation.activation;

message ActivationRequest{
     required int32 id=1;//角色id 
     required int32 key_type = 2;//激活码类型 1白金礼包  2评测礼包  3新手礼包
     required string activation = 3;//激活码
}

message ActivationResponse{
     required bool result = 1;
     optional string message = 2;
}